Added test method

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ gunicorn = "*"
 yapf = "*"
 flask-pymongo = "*"
 pymongo = {extras = ["srv"], version = "*"}
+python-dotenv = "*"
 
 [dev-packages]
 
